# image_description

./: .gitignore  README.md
.aidlc-rule-details/docs/: ADMINISTRATIVE_GUIDE.md
aidlc-docs/: aidlc-state.md  audit.md
aidlc-docs/construction/build-and-test/: build-and-test-summary.md
aidlc-docs/construction/plans/: code-generation-plan.md
aidlc-docs/inception/application-design/: application-design.md  component-dependency.md  component-methods.md  components.md  services.md
aidlc-docs/inception/plans/: execution-plan.md
aidlc-docs/inception/requirements/: requirement-verification-questions.md  requirements.md
aidlc-docs/inception/user-stories/: personas.md  stories.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  errors.py  logging.py  security.py
backend/app/schemas/: description.py  error.py
backend/app/services/: description_service.py  image_validation.py
backend/tests/: conftest.py  test_api.py  test_description_service.py  test_image_validation.py  test_schemas_pbt.py
frontend/: .env.local.example  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
frontend/__tests__/: DescriptionResult.test.tsx  ImageUploader.test.tsx  apiClient.test.ts  validation.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DescriptionResult.tsx  ImageUploader.tsx
frontend/lib/: apiClient.ts  types.ts  validation.ts
(+8 files in other folders)
